# trading_sys

./: Cargo.toml  README.md
migrations/2019-02-03-062122_create_posts/: up.sql
migrations/2019-02-05-041039_create_aggregate_trades/: down.sql  up.sql
migrations/2019-02-05-110931_create_book_depth/: down.sql  up.sql
migrations/2019-02-06-132123_create_klines/: down.sql  up.sql
migrations/2019-02-07-085228_mini_tickers/: down.sql  up.sql
migrations/2019-02-09-013951_trades/: down.sql  up.sql
migrations/2019-02-09-014028_tickers/: down.sql  up.sql
proptest-regressions/serde_parsers/: mod.txt
src/: currency_pairs.rs  lib.rs  main.rs  models.rs  schema.rs
src/_nomics/: currencies.rs
src/binance/: BookDepthStreams.rs  aggregate_trade.rs  book_depth.rs  currency_pairs.rs  kline.rs  mod.rs  trade.rs
src/coinmarketcap/: coinlist.rs  filesys.rs  mod.rs  request.rs
src/db_actions/: mod.rs
src/models/: aggregate_trades.rs  book_depth.rs  kline.rs  klines.rs  mini_ticker.rs  mod.rs  tickers.rs  trades.rs
src/nomics/: currencies.rs  mod.rs
src/regex/: parse_regex.rs
src/serde_parsers/: mod.rs
