[package]
name = "trading_sys"
version = "0.1.0"
authors = ["Peita Lin <n6378056@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4.0"
env_logger = "0.6.0"
maplit = "1"
clap = "2"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
scraper = "0.9.1"
threadpool = "1"
# serialization
serde = "*"
serde_json = "*"
serde_derive = "*"
# web
reqwest = "*"
hyper = "*"
actix = "*"
actix-web = { version = "0.7.18", features = ["alpn"] }
futures = "*"
# crypto
ring = "*"
data-encoding = "*"
# enum
strum = "0.13.0"
strum_macros = "*"
# data stores
redis = "*"
diesel = { version = "1.0.0", features = ["postgres", "chrono", "uuid", "serde_json"] }
dotenv = "0.9.0"
uuid = { version = "0.7", features = ["v4", "v5", "serde"] }
num = "0.2"
# tests
proptest = "0.9.0"
